# Jiaming-Xu-CV

./: README.md
schoolExperience/APIs/: README.txt  build.gradle
schoolExperience/Emerge/: Installation_Deployment Script.docx  project_details.txt
schoolExperience/Emerge/source code/: AIMatchingSys.py  controller.py  createmsg.py  database backup.db  database.db  database_res.db  intoNaviBar.js  model.py  readme.md  requirements.txt  run.py  sql.py  test.py  virtual_admin.py  virtual_user.py
schoolExperience/Emerge/source code/AIMatching_FakeData/: AIMatchingSys.py  coach_fake_data.csv  fakedata_generator.py  leader_fake_data.csv  sql2.py
schoolExperience/Emerge/source code/templates/: EditCoachProfile.html  ForgotPassword.html  (+21 more)
schoolExperience/Hashmap/code/: Makefile  Readme.txt  data.txt  data1.txt  hashmap.c  hashmap.h  hashmap_atomic.c  hashmap_barrier.c  hashmap_fg.c  hashmap_mutex.c  hashmap_sem.c  hashmap_spinlock.c  hashmap_test.c  instantiate.c  instantiate.h  qalloc.c  qalloc.h  test.c
schoolExperience/Intelligent Animation/A simple 2d animation.zip/: option1.ipynb  readme.txt
schoolExperience/Intelligent Animation/Ball movement/: COMP3419-W05-Lab-TemplateCode-Updated.ipynb
schoolExperience/Mario/Codebase C/: README.md  build.gradle  temp.txt
workExperience/: README.txt
workExperience/Version_Description_Document/: README.txt  Software_VDD.docx
workExperience/linuxVersion/linux_setpw_ui/: CMakeLists.txt  README.txt  company.cpp  login.cpp  login.h  login.ui  main.cpp  md5.cpp  md5.hpp  timer.cpp  timer.h  windowLogin.cpp  windowLogin.h
workExperience/linuxVersion/software_linux/: CMakeLists.txt  README.txt
workExperience/linuxVersion/software_linux/Lib/: README.txt
workExperience/linuxVersion/software_linux/resources/: README.txt
workExperience/linuxVersion/software_linux/resources/language/: linguist.cpp
workExperience/linuxVersion/software_linux/resources/qrc/: Translation_en.qm  Translation_zh.qm  mainApp.qrc
workExperience/linuxVersion/software_linux/src/: main.cpp
workExperience/linuxVersion/software_linux/src/control_authentity/: company.cpp  company.hpp  md5.cpp
workExperience/linuxVersion/software_linux/src/dialog/dialog_gui/: dialog_gcp_report.cpp  dialog_rtk_coor.cpp  loginWindow.cpp
workExperience/linuxVersion/software_linux/src/gui/: mainApp.cpp
workExperience/linuxVersion/software_linux/src/include/include_gui/: colourise.h  dialog_gcp_report.h  mainApp.h  mainwindowSetting.h  mergeMp4.h  stopWatch.h  widget_newProcess.h  widget_startProcess.h  widget_viewProcess.h
workExperience/linuxVersion/software_linux/src/include/include_process/: login.h  loginWindow.h  processBag.h  timer.h
workExperience/linuxVersion/software_linux/src/tools/process/: processBag.cpp
workExperience/linuxVersion/software_linux/src/ui/ui_dialog/: dialog_gcp_report.ui  login.ui  mainwindowSetting.ui
workExperience/linuxVersion/software_linux/src/ui/ui_gui/: mainApp.ui
workExperience/linuxVersion/software_linux/src/ui/ui_widget/: widget_newProcess.ui  widget_startProcess.ui  widget_viewProcess.ui
workExperience/linuxVersion/software_linux/src/widgets/widget_gui/: widget_newProcess.cpp  widget_startProcess.cpp  widget_viewProcess.cpp
workExperience/windowsVersion/installTool/: README.txt  inno.iss  license.txt
workExperience/windowsVersion/setPasscode/: README.txt
workExperience/windowsVersion/softwareV1/: README.txt  mainApp.sln
workExperience/windowsVersion/softwareV2/: README.txt  setup.bat
workExperience/windowsVersion/softwareV3/: README.txt  mainApp.sln
(+1761 files in other folders)
